tests/paczka1/fuzzy1/22389018.err
Error in line 9: St7 A324 45,5
Error in line 17: 2Aby A889 17,4
Error in line 24: S990 S445 76,1
Error in line 28: qlV6Elk A889 109,32
Error in line 32: M6h A889 45,6
Error in line 22: St7 S445 48,3
Error in line 35: qlVAElk A889 3A0,4
Error in line 33: M6h A324 862,2
